force-app/main/default/objects/Account/fields/Account_Billing_Info_Missing__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Info_Missing__c</fullName>
    <description>Check if minimum and necessary billing information is specified for a given account.</description>
    <formula>OR(
AND(
    ISPICKVAL( Market__c , &quot;Denmark&quot;),
    ISPICKVAL( Type , &quot;Customer&quot; ),
    AND(
        AND(
           ISBLANK( NAV_Bill_To_Account_No__c ), 
           ISBLANK( Bill_To_Account_Lookup__c )
           ),
        OR(
		    ISBLANK( VAT_Number__c ),
			AND(    
			   ISBLANK( Clio_GLN_Number__c ),
			   ISBLANK( Invoice_Email_1__c )
			   ) 
            )
         )
   ),
AND(
    ISPICKVAL( Market__c , &quot;Sweden&quot;),
    ISPICKVAL(  Type , &quot;Customer&quot; ),
    AND(
		AND(
           ISBLANK( NAV_Bill_To_Account_No__c ), 
           ISBLANK( Bill_To_Account_Lookup__c )
           ),        
        OR(
		   ISBLANK( Clio_OrgNumber__c ),
		   AND(    
			   ISBLANK( Clio_GLN_Number__c ),
			   ISBLANK( Invoice_Email_1__c )
			   ) 
            )
         )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Necessary info: VAT/ORG number and either Invoice email or EAN/GLN number. Or the NAVid of the Bill-To account</inlineHelpText>
    <label>Account Billing Info Missing</label>
    <type>Checkbox</type>
</CustomField>