force-app/main/default/objects/Account/fields/Account_Domain_Layer_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Domain_Layer_ID__c</fullName>
    <description>Sync from zero</description>
    <label>Account Domain Layer ID</label>
    <type>TextArea</type>
</CustomField>