force-app/main/default/objects/Account/fields/Account_ID_18_character__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_18_character__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID 18-character</label>
    <type>Text</type>
</CustomField>