force-app/main/default/objects/Account/fields/Account_Stage__c.field-meta.xml
<CustomField>
    <fullName>Account_Stage__c</fullName>
    <label>Account Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To contact</fullName>
            </value>
            <value>
                <fullName>Contacting</fullName>
            </value>
            <value>
                <fullName>In dialogue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>