force-app/main/default/objects/Account/fields/Active_Subscription_Count_High__c.field-meta.xml
<CustomField>
    <fullName>Active_Subscription_Count_High__c</fullName>
    <description>Data input by Demand Tool: &quot;9. Account - Subscription Count - Various Updates&quot;</description>
    <inlineHelpText>Number of active subscriptions for products grouped as &quot;high study&quot;</inlineHelpText>
    <label>Active Subscription Count - High</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>