force-app/main/default/objects/Account/fields/Active_Subscription_Count_Low__c.field-meta.xml
<CustomField>
    <fullName>Active_Subscription_Count_Low__c</fullName>
    <description>Data input by Demand Tool: &quot;9. Account - Subscription Count - Various Updates&quot;</description>
    <label>Active Subscription Count - Low</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>