force-app/main/default/objects/Account/fields/Active_Subscriptions_2__c.field-meta.xml
<CustomField>
    <fullName>Active_Subscriptions_2__c</fullName>
    <label>Active Subscriptions 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>