force-app/main/default/objects/Account/fields/ACV_Expiring_Next_Year__c.field-meta.xml
<CustomField>
    <fullName>ACV_Expiring_Next_Year__c</fullName>
    <label>ACV Expiring Next Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>