force-app/main/default/objects/Account/fields/ACV_Expiring_this_year__c.field-meta.xml
<CustomField>
    <fullName>ACV_Expiring_this_year__c</fullName>
    <label>ACV Expiring this year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>