force-app/main/default/objects/Account/fields/Analytics_Page_Views__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Page_Views__c</fullName>
    <description>Imported from goggle analytics monthly</description>
    <inlineHelpText>Imported from goggle analytics monthly</inlineHelpText>
    <label>Analytics - Page Views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>