force-app/main/default/objects/Account/fields/Analytics_Page_Views_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Page_Views_Last_Month__c</fullName>
    <label>Analytics - Page Views Last Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>