force-app/main/default/objects/Account/fields/Analytics_Users__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Users__c</fullName>
    <description>Imported from Analytics</description>
    <inlineHelpText>Imported from Analytics</inlineHelpText>
    <label>Analytics - Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>