force-app/main/default/objects/Account/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <label>Balance</label>
    <summarizedField>Ledger_Entry__c.Remaining_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Ledger_Entry__c.Open__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Ledger_Entry__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>