force-app/main/default/objects/Account/fields/Bill_To_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use for hardcoding a different recipient for invoices.</description>
    <inlineHelpText>Set a different recipient for invoices.</inlineHelpText>
    <label>Bill-To Account Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Bill-To Account Lookup)</relationshipLabel>
    <relationshipName>Bill_To_Account_Lookup</relationshipName>
    <type>Lookup</type>
</CustomField>