force-app/main/default/objects/Account/fields/Bonnier_Account_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Bonnier_Account_Type_Other__c</fullName>
    <description>Shows information regarding the different types of accounts more related to Municipalities.</description>
    <label>Account Type Other</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enskild</fullName>
            </value>
            <value>
                <fullName>Huvudman</fullName>
            </value>
            <value>
                <fullName>Kommunal</fullName>
            </value>
            <value>
                <fullName>Landsting</fullName>
            </value>
            <value>
                <fullName>Statlig</fullName>
            </value>
            <value>
                <fullName>NO ACCOUNT TYPE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>