force-app/main/default/objects/Account/fields/Bonnier_Institution_Number__c.field-meta.xml
<CustomField>
    <fullName>Bonnier_Institution_Number__c</fullName>
    <description>Showing information from external system. Field &quot;Instnr&quot;</description>
    <label>Institution Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>