force-app/main/default/objects/Account/fields/Clio_Account_NAV_Id__c.field-meta.xml
<CustomField>
    <fullName>Clio_Account_NAV_Id__c</fullName>
    <description>Unique Id for each Navision instance. However, since multiple NAV instances are used. Likely there will exist duplicates.</description>
    <externalId>true</externalId>
    <label>Account NAV Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>