force-app/main/default/objects/Account/fields/Clio_Account_Zero_Id__c.field-meta.xml
<CustomField>
    <fullName>Clio_Account_Zero_Id__c</fullName>
    <description>Unique key generated in Zero.</description>
    <externalId>true</externalId>
    <label>Account Zero Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>