force-app/main/default/objects/Account/fields/Clio_GLN_Number__c.field-meta.xml
<CustomField>
    <fullName>Clio_GLN_Number__c</fullName>
    <description>Reference number for electronic invoicing.
GLN (8 characters) for Swedish accounts.</description>
    <inlineHelpText>Use for Finance (SE), GLN (Global Location Number)
EAN (DK) electronic field</inlineHelpText>
    <label>EAN/GLN-number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>