force-app/main/default/objects/Account/fields/Clio_Institution_Type__c.field-meta.xml
<CustomField>
    <fullName>Clio_Institution_Type__c</fullName>
    <description>Shows different values for the Type of Institutions at Account level</description>
    <label>Institution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO INSTITUTION TYPE</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Kommunale ungdomsskoler</fullName>
            </value>
            <value>
                <fullName>Specialskoler</fullName>
            </value>
            <value>
                <fullName>Dagbehandlingstilbud og anbringelsessteder</fullName>
            </value>
            <value>
                <fullName>Friskoler og private grundskoler</fullName>
            </value>
            <value>
                <fullName>Efterskoler</fullName>
            </value>
            <value>
                <fullName>Efterskoler med samlet særligt tilbud</fullName>
            </value>
            <value>
                <fullName>Kommunale internationale skoler</fullName>
            </value>
            <value>
                <fullName>Frie og private internationale skoler</fullName>
            </value>
            <value>
                <fullName>Uddannelsesinstitutioner for unge med særlige behov</fullName>
            </value>
            <value>
                <fullName>Dagbehandlingstilbud og behandlingshjem</fullName>
            </value>
            <value>
                <fullName>Kommunale ungdomsskoler og ungdomskostskoler</fullName>
            </value>
            <value>
                <fullName>Library</fullName>
            </value>
            <value>
                <fullName>Municipality</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Folkeskoler</fullName>
            </value>
            <value>
                <fullName>Grundskola</fullName>
                <isActive>false</isActive>
                <label>Grundskola</label>
            </value>
            <value>
                <fullName>Gymnasieskola</fullName>
                <isActive>false</isActive>
                <label>Gymnasieskola</label>
            </value>
            <value>
                <fullName>Kommunal vuxenutbildning</fullName>
                <isActive>false</isActive>
                <label>Kommunal vuxenutbildning</label>
            </value>
            <value>
                <fullName>Religös friskola</fullName>
                <isActive>false</isActive>
                <label>Religös friskola</label>
            </value>
            <value>
                <fullName>Specialskola</fullName>
                <isActive>false</isActive>
                <label>Specialskola</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>