force-app/main/default/objects/Account/fields/Clio_OrgNumber__c.field-meta.xml
<CustomField>
    <fullName>Clio_OrgNumber__c</fullName>
    <description>(SE ONLY) CVR =  Company Number / Org. Number for Sweden</description>
    <inlineHelpText>(SE ONLY) CVR =  Company Number / Org. Number for Sweden</inlineHelpText>
    <label>CVR/Org. Number</label>
    <length>14</length>
    <type>Text</type>
</CustomField>