force-app/main/default/objects/Account/fields/Clio_School_ID__c.field-meta.xml
<CustomField>
    <fullName>Clio_School_ID__c</fullName>
    <description>Field to have the Skolenhetskod</description>
    <inlineHelpText>Skolenhetskod</inlineHelpText>
    <label>School ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>