force-app/main/default/objects/Account/fields/Count_Account__c.field-meta.xml
<CustomField>
    <fullName>Count_Account__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>