force-app/main/default/objects/Account/fields/CSM_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>CSM_Owner_ID__c</fullName>
    <description>CSM SFDC ID, use for report and massupdate</description>
    <formula>CSM__r.User_ID_18_character__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CSM SFDC ID, use for report and massupdate</inlineHelpText>
    <label>CSM Owner ID</label>
    <type>Text</type>
</CustomField>