force-app/main/default/objects/Account/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <inlineHelpText>A:
B:
C:
D:</inlineHelpText>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>