force-app/main/default/objects/Account/fields/Customers_in_Municipality__c.field-meta.xml
<CustomField>
    <fullName>Customers_in_Municipality__c</fullName>
    <description>Demand Tool - Counts the number of schools which are customers in this municipality</description>
    <label>Customers in Municipality</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>