force-app/main/default/objects/Account/fields/DPA__c.field-meta.xml
<CustomField>
    <fullName>DPA__c</fullName>
    <inlineHelpText>Date at which the DPA was signed.</inlineHelpText>
    <label>DPA Signed</label>
    <type>Date</type>
</CustomField>