force-app/main/default/objects/Account/fields/DPA_Dialogue__c.field-meta.xml
<CustomField>
    <fullName>DPA_Dialogue__c</fullName>
    <description>Is DPA discussion ongoing with customer</description>
    <inlineHelpText>Is DPA discussion ongoing with customer</inlineHelpText>
    <label>DPA Dialogue</label>
    <type>Date</type>
</CustomField>