force-app/main/default/objects/Account/fields/DPA_ISAE_3000_TIA__c.field-meta.xml
<CustomField>
    <fullName>DPA_ISAE_3000_TIA__c</fullName>
    <description>Use for legal 202112</description>
    <inlineHelpText>Use for legal 202112</inlineHelpText>
    <label>DPA ISAE 3000 + TIA</label>
    <type>Date</type>
</CustomField>