force-app/main/default/objects/Account/fields/DPA_Sent__c.field-meta.xml
<CustomField>
    <fullName>DPA_Sent__c</fullName>
    <description>When last DPA was sent by legal</description>
    <inlineHelpText>When last DPA was sent by legal</inlineHelpText>
    <label>DPA Sent</label>
    <type>Date</type>
</CustomField>