force-app/main/default/objects/Account/fields/DPA_Status__c.field-meta.xml
<CustomField>
    <fullName>DPA_Status__c</fullName>
    <inlineHelpText>If blank, no DPA signed.
If not blank, the DPA has either been signed by municipality or school.</inlineHelpText>
    <label>DPA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DPA signed by municipality</fullName>
            </value>
            <value>
                <fullName>DPA signed by school</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>