force-app/main/default/objects/Account/fields/EAN__c.field-meta.xml
<CustomField>
    <fullName>EAN__c</fullName>
    <description>Use for Navision integration</description>
    <inlineHelpText>Use for Navision integration</inlineHelpText>
    <label>EAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>