force-app/main/default/objects/Account/fields/Eliteschool_Date__c.field-meta.xml
<CustomField>
    <fullName>Eliteschool_Date__c</fullName>
    <description>Eliteschool Date from Zero</description>
    <inlineHelpText>Eliteschool Date from Zero</inlineHelpText>
    <label>Innovative School Date</label>
    <type>Date</type>
</CustomField>