force-app/main/default/objects/Account/fields/Expired_Subscription_Count__c.field-meta.xml
<CustomField>
    <fullName>Expired_Subscription_Count__c</fullName>
    <label>Expired Subscription Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>