force-app/main/default/objects/Account/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <description>Feedback from customer</description>
    <inlineHelpText>Feedback from customer</inlineHelpText>
    <label>Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>