force-app/main/default/objects/Account/fields/Framework_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Framework_Agreement__c</fullName>
    <label>Framework Agreement</label>
    <type>Date</type>
</CustomField>