force-app/main/default/objects/Account/fields/Grade_0__c.field-meta.xml
<CustomField>
    <fullName>Grade_0__c</fullName>
    <label>Grade 0</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>