force-app/main/default/objects/Account/fields/Grade_10__c.field-meta.xml
<CustomField>
    <fullName>Grade_10__c</fullName>
    <label>Grade 10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>