force-app/main/default/objects/Account/fields/Grade_1__c.field-meta.xml
<CustomField>
    <fullName>Grade_1__c</fullName>
    <label>Grade 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>