force-app/main/default/objects/Account/fields/Gymnasium__c.field-meta.xml
<CustomField>
    <fullName>Gymnasium__c</fullName>
    <description>use for stats from elevstatistik SE</description>
    <inlineHelpText>use for stats from elevstatistik SE</inlineHelpText>
    <label>Gymnasium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>