force-app/main/default/objects/Account/fields/Implementation_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Success Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>