force-app/main/default/objects/Account/fields/Implementations_Task__c.field-meta.xml
<CustomField>
    <fullName>Implementations_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>use for work flow formula https://clio.lightning.force.com/lightning/setup/WorkflowRules/page?address=%2F01Q1t000000U4sl&amp;nodeId=WorkflowRules</description>
    <inlineHelpText>use for work flow formula https://clio.lightning.force.com/lightning/setup/WorkflowRules/page?address=%2F01Q1t000000U4sl&amp;nodeId=WorkflowRules</inlineHelpText>
    <label>Implementations Task</label>
    <type>Checkbox</type>
</CustomField>