force-app/main/default/objects/Account/fields/Institution_Type_DK__c.field-meta.xml
<CustomField>
    <fullName>Institution_Type_DK__c</fullName>
    <label>Institution Type2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DK - Centre for Pædagogisk og psykologisk rådgivning</fullName>
            </value>
            <value>
                <fullName>DK - Dagbehandlingstilbud og anbringelsessteder</fullName>
            </value>
            <value>
                <fullName>DK - Efterskoler</fullName>
            </value>
            <value>
                <fullName>DK - Efterskoler med samlet særligt tilbud</fullName>
            </value>
            <value>
                <fullName>DK - Erhvervsskoler m.v.</fullName>
            </value>
            <value>
                <fullName>DK - Folkehøjskoler</fullName>
            </value>
            <value>
                <fullName>DK - Folkeskoler</fullName>
            </value>
            <value>
                <fullName>DK - Frie fagskoler</fullName>
            </value>
            <value>
                <fullName>DK - Friskoler og private grundskoler</fullName>
            </value>
            <value>
                <fullName>DK - Gymnasier og HF-kurser</fullName>
            </value>
            <value>
                <fullName>DK - Kommunale internationale skoler</fullName>
            </value>
            <value>
                <fullName>DK - Kommunale ungdomsskoler</fullName>
            </value>
            <value>
                <fullName>DK - Kommuner</fullName>
            </value>
            <value>
                <fullName>DK - Maritime uddannelsesinstitutioner</fullName>
            </value>
            <value>
                <fullName>DK - Produktionsskoler</fullName>
            </value>
            <value>
                <fullName>DK - Specialskoler for børn</fullName>
            </value>
            <value>
                <fullName>DK - Specialskoler for voksne</fullName>
            </value>
            <value>
                <fullName>DK - Uddannelsesinstitutioner for unge med særlige behov</fullName>
            </value>
            <value>
                <fullName>DK - Ungdommens Uddannelsesvejledning</fullName>
            </value>
            <value>
                <fullName>DK - Bibiliotek</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>