force-app/main/default/objects/Account/fields/Institution_Type_Segment__c.field-meta.xml
<CustomField>
    <fullName>Institution_Type_Segment__c</fullName>
    <label>Institution Type Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Account</fullName>
            </value>
            <value>
                <fullName>Secondary Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>