force-app/main/default/objects/Account/fields/Invoice_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_1__c</fullName>
    <description>Field created to store email address to send invoice to.</description>
    <label>Invoice Email 1</label>
    <type>Email</type>
</CustomField>