force-app/main/default/objects/Account/fields/Invoice_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_2__c</fullName>
    <description>Field used to store second email address to send invoice to.</description>
    <label>Invoice Email 2</label>
    <type>Email</type>
</CustomField>