force-app/main/default/objects/Account/fields/Is_Bill_To_Account_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Is_Bill_To_Account_Assigned__c</fullName>
    <description>Controls validation if Finance has hardcoded a different payer for invoices.</description>
    <formula>OR(
   NOT(ISBLANK( NAV_Bill_To_Account_No__c )),
   NOT(ISBLANK( Bill_To_Account_Lookup__c ))
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Bill To Account Assigned</label>
    <type>Checkbox</type>
</CustomField>