force-app/main/default/objects/Account/fields/Jira_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Jira_Dashboard__c</fullName>
    <description>Use for implementation</description>
    <inlineHelpText>Use for implementation</inlineHelpText>
    <label>Jira Dashboard</label>
    <type>Url</type>
</CustomField>