force-app/main/default/objects/Account/fields/Kindergarten__c.field-meta.xml
<CustomField>
    <fullName>Kindergarten__c</fullName>
    <description>Number of students</description>
    <inlineHelpText>Number of students, eg Bornehav</inlineHelpText>
    <label>Kindergarten</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>