force-app/main/default/objects/Account/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Use for DK to label Municipality</description>
    <inlineHelpText>Use for DK to label Municipality</inlineHelpText>
    <label>Label</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kører godt</fullName>
            </value>
            <value>
                <fullName>Venter på SKI</fullName>
            </value>
            <value>
                <fullName>Drop-In klar</fullName>
            </value>
            <value>
                <fullName>Opmærksomhed!!</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Decentral</fullName>
            </value>
            <value>
                <fullName>Alinea kommune</fullName>
            </value>
            <value>
                <fullName>Udløb snart</fullName>
            </value>
            <value>
                <fullName>ELITEkommune</fullName>
            </value>
            <value>
                <fullName>Gyldendal kommune</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>