force-app/main/default/objects/Account/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <description>Last Activity Date in task &amp; events, update via Demandtools</description>
    <inlineHelpText>Last Activity Date in task &amp; events, update via Demandtools</inlineHelpText>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>