force-app/main/default/objects/Account/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <label>Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Denmark</fullName>
            </value>
            <value>
                <fullName>Sweden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>