force-app/main/default/objects/Account/fields/MAX_Date__c.field-meta.xml
<CustomField>
    <fullName>MAX_Date__c</fullName>
    <description>Show latest trial date n Subscriptions</description>
    <inlineHelpText>Show latest trial date n Subscriptions</inlineHelpText>
    <label>MAX Date</label>
    <type>Date</type>
</CustomField>