force-app/main/default/objects/Account/fields/Middle__c.field-meta.xml
<CustomField>
    <fullName>Middle__c</fullName>
    <description>Number of students</description>
    <inlineHelpText>Number of students</inlineHelpText>
    <label>Middle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>