force-app/main/default/objects/Account/fields/Municipality__c.field-meta.xml
<CustomField>
    <fullName>Municipality__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Municipality Account. Mainly valid for Schools.</description>
    <label>Municipality</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Schools within this municipality.</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>