force-app/main/default/objects/Account/fields/Municipality_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Municipality_Account_Owner__c</fullName>
    <formula>Municipality__r.Owner.User_ID_18_character__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Municipality Account Owner</label>
    <type>Text</type>
</CustomField>