force-app/main/default/objects/Account/fields/Municipality_Competitor_Expires__c.field-meta.xml
<CustomField>
    <fullName>Municipality_Competitor_Expires__c</fullName>
    <label>Municipality - Competitor Expires</label>
    <type>Date</type>
</CustomField>